# stacksaw

./: .gitignore  CLAUDE.md  Cargo.toml  ORIGINAL-SPEC.md  README.md  TODOs.md  install-stacksaw  install-stacksaw.bat
.cargo/: config.toml
adapters/antigravity/: README.md  pyproject.toml
adapters/antigravity/src/stacksaw_antigravity_adapter/: __init__.py  __main__.py  agent.py  tools.py
crates/stacksaw/: Cargo.toml
crates/stacksaw-agents/: Cargo.toml
crates/stacksaw-agents/src/: acp.rs  lib.rs  policy.rs  restack.rs  workflow.rs
crates/stacksaw-agents/tests/: acp_roundtrip.rs  repro_restack.rs
crates/stacksaw-core/: Cargo.toml
crates/stacksaw-core/src/: client.rs  config.rs  core.rs  daemon.rs  discovery.rs  handle.rs  lib.rs  prober.rs  recent.rs  server.rs  service.rs  watch.rs
crates/stacksaw-core/tests/: canonical_mutations.rs  handle_parity.rs  lint_jobs.rs  repro_race.rs  repro_send.rs  ssp_roundtrip.rs
crates/stacksaw-git/: Cargo.toml
crates/stacksaw-git/src/: archive.rs  diff.rs  edit.rs  error.rs  executor.rs  lib.rs  model.rs  numstat.rs  rebase_probe.rs  refs.rs  repo.rs  reshape.rs  restack.rs  snapshot.rs
crates/stacksaw-git/tests/: archive.rs  canonical_projection.rs  edit_worktree.rs  executor_test.rs  rebase_probe.rs  repro_checkpoint_collision.rs  repro_e2big.rs  repro_leak.rs  repro_refs.rs  repro_rename.rs  repro_restore_tag.rs  repro_stale_link.rs  repro_traversal.rs  reshape.rs  staircase.rs
crates/stacksaw-lint/: Cargo.toml
crates/stacksaw-lint-kotlin/: Cargo.toml
crates/stacksaw-lint-kotlin/src/: lib.rs
crates/stacksaw-lint/src/: apply.rs  external.rs  lib.rs  linter.rs  scheduler.rs
crates/stacksaw-lint/src/builtins/: commitmsg.rs  copyright.rs  ktfqn.rs  mod.rs
crates/stacksaw-lint/tests/: repro_external_deadlock.rs
crates/stacksaw-rainbox/: Cargo.toml
crates/stacksaw-rainbox/proptest-regressions/: lib.txt
crates/stacksaw-rainbox/src/: identity.rs  lib.rs  relevance.rs
crates/stacksaw-ssp/: Cargo.toml
crates/stacksaw-ssp/src/: client.rs  codec.rs  git_ref.rs  lib.rs  message.rs  method.rs  types.rs
crates/stacksaw-ssp/tests/: client_test.rs  repro_hang.rs  repro_leak.rs
crates/stacksaw-ui/: Cargo.toml  theme-nerd.toml  theme.toml
crates/stacksaw-ui/assets/: Kotlin.sublime-syntax
crates/stacksaw-ui/examples/: perf_sweep.rs
crates/stacksaw-ui/src/: app.rs  command.rs  highlight.rs  layout.rs  lib.rs  redraw.rs  staircase_commands.rs  surface.rs  theme.rs
crates/stacksaw-ui/src/app/: handlers.rs  mod.rs  navigator.rs  state.rs
crates/stacksaw-ui/src/app/rendering/: commits.rs  common.rs  files.rs  mod.rs  overlays.rs  stacks.rs  viewport.rs
crates/stacksaw-ui/src/viewport/: diff.rs  mod.rs  run.rs
crates/stacksaw-ui/tests/: harness.rs  hint_bar_goldens.rs  render.rs
crates/stacksaw-ui/tests/goldens/: hint_bar.txt
crates/stacksaw/src/: cli.rs  commands.rs  context.rs  main.rs  output.rs  rebase_prober.rs  runner.rs  schema.rs  tui.rs
perf/sweep/: jomof-specialist.txt  jomos-macbook-pro.txt
playground/: .gitignore  README.md  lib.sh  playground.sh
playground/scenarios/: bazel-mono.sh  detached.sh  dirty.sh  js-mono.sh  nested-mono.sh  rebase-conflict.sh  single-stack.sh  staircase.sh  studio-mono.sh
xtask/: Cargo.toml
xtask/src/: main.rs
