[workspace]
resolver = "2"
members = [
    "crates/stacksaw",
    "crates/stacksaw-core",
    "crates/stacksaw-git",
    "crates/stacksaw-ssp",
    "crates/stacksaw-ui",
    "crates/stacksaw-rainbox",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0"
repository = "https://github.com/stacksaw/stacksaw"
authors = ["stacksaw contributors"]

[workspace.dependencies]
# Internal crates
stacksaw-core = { path = "crates/stacksaw-core" }
stacksaw-git = { path = "crates/stacksaw-git" }
stacksaw-ssp = { path = "crates/stacksaw-ssp" }
stacksaw-ui = { path = "crates/stacksaw-ui" }
stacksaw-rainbox = { path = "crates/stacksaw-rainbox" }

# Serialization / schema
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
toml = "0.8"

# Async
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

# Git
gix = { version = "0.66", default-features = false, features = ["max-performance-safe", "revision", "blob-diff", "status", "mailmap"] }

# Diff / text
imara-diff = "0.1"
similar = "2"
unicode-width = "0.2"
unicode-segmentation = "1"

# Color
palette = "0.7"

# Syntax highlighting: syntect ships a large corpus of Sublime/TextMate
# grammars and themes. Use the pure-Rust `fancy-regex` engine (no oniguruma C
# dependency) so `cargo install` stays hermetic.
syntect = { version = "5", default-features = false, features = ["default-fancy"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

# FS / config / cache
notify = "6"
notify-debouncer-full = "0.3"
ignore = "0.4"
globset = "0.4"
directories = "5"
redb = "2"
fs4 = { version = "0.11", features = ["sync"] }

# Utility
regex = "1"
jiff = "0.1"
nucleo-matcher = "0.3"
blake3 = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
rayon = "1"
uuid = { version = "1", features = ["v4"] }

# TUI
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }


# Testing
insta = { version = "1", features = ["json"] }
assert_cmd = "2"
tempfile = "3"
proptest = "1"

[profile.release]
lto = "thin"
codegen-units = 1
