[package]
name = "stacksaw-agents"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "ACP client, workflow orchestration, and scratch worktrees"

[dependencies]
stacksaw-ssp.workspace = true
stacksaw-git.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
tokio-util.workspace = true
bytes = "1"
futures.workspace = true

[dev-dependencies]
tempfile.workspace = true
