[package]
name = "stacksaw-lint-kotlin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "ktfqn: the reference tree-sitter Kotlin linter for stacksaw"

[dependencies]
stacksaw-ssp.workspace = true
serde.workspace = true
tree-sitter.workspace = true
tree-sitter-kotlin.workspace = true
thiserror.workspace = true
globset.workspace = true
