[package]
name = "stacksaw-lint"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Finding model, lint scheduler, and built-in linters"

[dependencies]
stacksaw-ssp.workspace = true
stacksaw-lint-kotlin.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
blake3.workspace = true
jiff.workspace = true
rayon.workspace = true
regex.workspace = true

[dev-dependencies]
tempfile.workspace = true
