[package]
name = "stacksaw-ssp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Stacksaw Session Protocol: core types and method constants"

[dependencies]
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest = { workspace = true }
