[package]
name = "stacksaw"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "View, review, and reshape stacked and staircased git branches"
default-run = "stacksaw"

[[bin]]
name = "stacksaw"
path = "src/main.rs"

[dependencies]
stacksaw-ssp.workspace = true
stacksaw-git.workspace = true
stacksaw-core.workspace = true
stacksaw-ui.workspace = true
stacksaw-lint.workspace = true
stacksaw-rainbox.workspace = true
stacksaw-agents.workspace = true
ratatui.workspace = true
crossterm.workspace = true
clap.workspace = true
clap_complete.workspace = true
jiff.workspace = true
blake3.workspace = true
toml.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
tokio.workspace = true
directories.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
tempfile.workspace = true
predicates = "3"
